[add] header and jumbo

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,12 +12,21 @@
   <header class="text-white d-flex justify-content-center align-items-center ">
     <div class="row container d-flex justify-content-between debug ">
       <div class="col-2 px-0 debug ">logo</div>
-      <nav class="col-1 px-0 d-md-none debug">hamb</nav>
+      <nav class="col-2 px-0 d-md-none text-end debug">hamb</nav>
       <nav class="col-3 d-none d-md-block text-end debug">menu header</nav>
     </div>
   </header>
 
   <main>
+    <!-- jumbo -->
+    <section class="container-fluid debug">
+      <div class="container h-100  debug">
+        <div class="col-6 offset-3 debug h-100 p-4 col-md-8 offset-md-2 ">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+      </div>
+    </section>
+    <!-- portfolio -->
     <section class="container debug"></section>
   </main>
   <footer>f</footer>
