--- a/assets/index.html
+++ b/assets/index.html
@@ -10,24 +10,42 @@
 </head>
 <body>
   <header class="text-white d-flex justify-content-center align-items-center ">
-    <div class="row container d-flex justify-content-between debug ">
-      <div class="col-2 px-0 debug ">logo</div>
-      <nav class="col-2 px-0 d-md-none text-end debug">hamb</nav>
-      <nav class="col-3 d-none d-md-block text-end debug">menu header</nav>
+    <div class="row container d-flex justify-content-between debug2 ">
+      <div class="col-5  px-0 debug ">logo</div>
+      <nav class="col-5 px-0 d-md-none text-end debug">hamb</nav>
+      <nav class="col-5 d-none d-md-block text-end debug">menu header</nav>
     </div>
   </header>
 
   <main>
     <!-- jumbo -->
-    <section class="container-fluid debug">
-      <div class="container h-100  debug">
-        <div class="col-6 offset-3 debug h-100 p-4 col-md-8 offset-md-2 ">
+    <section class="container-fluid d-flex justify-content-center debug2">
+      <div class="container h-100  d-flex justify-content-center debug">
+        <div class="col-11 debug h-100 p-4 col-md-8 col-xxl-5 ">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
       </div>
     </section>
     <!-- portfolio -->
-    <section class="container debug"></section>
+    <section class="container-fluid ">
+      <div class="container-md h-100  d-flex flex-wrap debug ">
+        <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
+        <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
+        <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
+        <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
+      </div>
+    </section>
+<!-- about -->
+    <section class="container-fluid text-white debug">
+      <div class="col">
+        <h1 class="text-center mt-3 ">about</h1>
+      </div>
+      <div class="container-md h-75 d-flex flex-column align-items-center flex-md-row justify-content-md-center  debug ">
+        <div class="col-9 col-md-5 h-50  debug2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ab.</div>
+        <div class="col-9 col-md-5 h-50 debug2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, optio!</div>
+      </div>
+    </section>
+
   </main>
   <footer>f</footer>
 </body>
