[add] contact me

--- a/assets/index.html
+++ b/assets/index.html
@@ -28,7 +28,8 @@
     </section>
     <!-- portfolio -->
     <section class="container-fluid ">
-      <div class="container-md h-100  d-flex flex-wrap debug ">
+      <h1 class="text-center">portfolio</h1>
+      <div class="container-md h-75  d-flex flex-wrap debug ">
         <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
         <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
         <div class="col-12 h-25 col-md-6 col-xl-4 debug"></div>
@@ -45,8 +46,25 @@
         <div class="col-9 col-md-5 h-50 debug2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, optio!</div>
       </div>
     </section>
+    <!-- contact me -->
+    <section class="container-fluid debug ">
+      <h1 class="text-center text-white m-4 ">contact me</h1>
+      <div class="container-md h-75 d-flex align-items-center justify-content-between  flex-column  debug">
+        <form action="" class="col-8 h-75 col-md-10 debug">
+          <input type="text" class="d-block ">
+          <input type="text"  class="d-block ">
+          <input type="text"  class="d-block ">
+        </form>
+        <div class="container-md col-8 col-md-10 debug">
+          <button>invia</button>
+        </div>
+      </div>
+    </section>
 
   </main>
-  <footer>f</footer>
+  
+  <footer>
+
+  </footer>
 </body>
 </html>
