--- a/assets/index.html
+++ b/assets/index.html
@@ -62,8 +62,18 @@
     </section>
 
   </main>
-  
+
   <footer>
+    <div class="footer-top container-fluid ">
+      <div class="container-md d-flex flex-column flex-md-row   justify-content-center h-100 align-items-center  ">
+        <div class="col-12 col-md-4 debug h-25"></div>
+        <div class="col-12 col-md-4 debug h-25"></div>
+        <div class="col-12 col-md-4 debug h-25"></div>
+      </div>
+    </div>
+    <div class="footer-down container-fluid text-white">
+      <p class="text-center">copyright @ your website</p>
+    </div>
 
   </footer>
 </body>
