--- a/index.html
+++ b/index.html
@@ -111,13 +111,18 @@
 
 
 <!-- about -->
-    <section class="container-fluid text-white debug">
+    <section class="about container-fluid text-white debug">
       <div class="col">
         <h1 class="text-center mt-3 ">about</h1>
       </div>
       <div class="container-md h-75 d-flex flex-column align-items-center flex-md-row justify-content-md-center  debug ">
-        <div class="col-9 col-md-5 h-50  debug2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ab.</div>
-        <div class="col-9 col-md-5 h-50 debug2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, optio!</div>
+        <div class="col-9 col-md-5 h-50  debug2">Freelance in a free Bootstrap theme created by Start Bootstrap. The dowload includes complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy costommization</div>
+        <div class="col-9 col-md-5 h-50 debug2">Whether you' re a student looking to schowcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this themeplate is the perfect starting point!
+        </div>
+        
+      </div>
+      <div class="container-md d-flex justify-content-center ">
+        <button class="btn"> download</button>
       </div>
     </section>
     <!-- contact me -->
