--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
           
           <!-- star -->
-            <div class="d-flex justify-content-center  w-100  ">
+            <div class="d-flex  justify-content-center  w-100  ">
               <h3>GRAPHIC ARTIST - </h3>
               <h3>WEB DESIGNER - </h3>
               <h3>ILLUSTRATOR</h3>
@@ -167,15 +167,36 @@
   </main>
 
   <footer>
-    <div class="footer-top container-fluid ">
-      <div class="container-md d-flex flex-column flex-md-row   justify-content-center h-100 align-items-center  ">
-        <div class="col-12 col-md-4 debug h-25"></div>
-        <div class="col-12 col-md-4 debug h-25"></div>
-        <div class="col-12 col-md-4 debug h-25"></div>
+    <div class="footer-top container-fluid text-white  ">
+      <div class="container-md d-flex flex-column flex-md-row   justify-content-center h-100 align-items-center pb-4 pt-3  ">
+
+
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center pb-3 pt-3 text-center ">
+          <h2>LOCATION</h2>
+          <p>2215 John Daniel Drive Clark, MO 54243</p>
+        </div>
+
+
+        <div class="icon-group col-12 col-md-4 d-flex flex-column align-items-center pb-3 pt-3">
+          <h2>AROUND THE WEB</h2>
+          <div class="d-flex ">
+            <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="icon"><i class="fa-brands fa-google-plus-g"></i></div>
+            <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+            <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center  pb-3 pt-3 ">
+          <h2>ABOUT FREELANCER</h2>
+          <p>Freelance is a free to use, open source Bootstrap theme crated by <span>Start Bootstrap</span></p>
+        </div>
       </div>
     </div>
-    <div class="footer-down container-fluid text-white">
-      <p class="text-center">copyright @ your website</p>
+
+
+
+    <div class="footer-down container-fluid text-white p-5 ">
+      <p class="text-center">copyright @ your website 2019</p>
     </div>
 
   </footer>
