--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
     <!-- jumbo -->
     <section class="jumbo  d-flex justify-content-center text-white ">
-      <div class="row w-100 w-md-75 h-100 p-0 d-flex justify-content-center ">
+      <div class="row w-100  h-100 p-0 d-flex justify-content-center ">
 
         <div class="col-12  h-100 p-4 col-md-12 col-xl-7 d-flex align-items-center  flex-column  ">
           <div class="w-75 d-flex justify-content-center ">
@@ -54,7 +54,7 @@
 
           <!-- star -->
           
-            <div class="star w-50 d-flex justify-content-between  align-items-center mb-4 ">
+            <div class="star w-75   d-flex justify-content-between  align-items-center mb-4 ">
               <div class="col line "></div>
               <div class="col-star d-flex justify-content-center  ">
                 <i class="fa-solid fa-star"></i>
@@ -74,41 +74,74 @@
 <!-- TODO:RESIZE IMG -->
     <!-- portfolio -->
 
+    <section class="portfolio">
 
-    <section class="portfolio container-fluid ">
-      <h1 class="text-center m-4 ">portfolio</h1>
-
-      <div class="star w-50 d-flex justify-content-between  align-items-center m-auto mb-2">
-        <div class="col line "></div>
-        <div class="col-star d-flex justify-content-center  ">
-          <i class="fa-solid fa-star"></i>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12 ">
+            <h2>Portfolio</h2>
+            <div class="star w-75   d-flex justify-content-between  align-items-center mb-4 ">
+              <div class="col line "></div>
+              <div class="col-star d-flex justify-content-center  ">
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="col line"></div>
+            </div>
+          </div>
         </div>
-        <div class="col line"></div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 ">
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/cabin.png" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/cake.png" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/circus.png" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/game.png" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/safe.png" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="cust-card my-3">
+              <div class="plus-hidden text-center">
+                <i class="fa-solid fa-plus text-white"></i>
+              </div>
+              <img src="assets/img/submarine.png" alt="">
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="container-md h-75  d-flex flex-wrap big_mb">
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3 ">
-          <img src="assets/img/cabin.png" alt="" class="">
-        </div>
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3">
-          <img src="assets/img/cake.png" alt="" class="rounded-4">
-        </div>
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3">
-          <img src="assets/img/circus.png" alt="">
-        </div>
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3  ">
-          <img src="assets/img/game.png" alt="">
-        </div>
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3  ">
-          <img src="assets/img/safe.png" alt="">
-        </div>
-        <div class="col-12 h-25 col-md-6 col-xl-4 p-3  ">
-          <img src="assets/img/submarine.png" alt="">
-        </div>
-      </div>
     </section>
-
-
 
 <!-- about -->
     <section class="about container-fluid text-white debug">
